--- a/Beakjoon_BFS/.project
+++ b/Beakjoon_BFS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>A_0716</name>
+	<name>Beakjoon_BFS</name>
 	<comment></comment>
 	<projects>
 	</projects>
