--- a/Beakjoon_queue/.project
+++ b/Beakjoon_queue/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>A_0723</name>
+	<name>Beakjoon_queue</name>
 	<comment></comment>
 	<projects>
 	</projects>
