--- a/Beakjoon_start/.project
+++ b/Beakjoon_start/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>A_0704</name>
+	<name>Beakjoon_start</name>
 	<comment></comment>
 	<projects>
 	</projects>
