--- a/Baekjoon_stack/.project
+++ b/Baekjoon_stack/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>A_0730</name>
+	<name>Baekjoon_stack</name>
 	<comment></comment>
 	<projects>
 	</projects>
